--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
 	}
 }
 plugins {
-	id "org.jetbrains.intellij" version "0.2.16"
+	id "org.jetbrains.intellij" version "0.2.17"
 }
 apply plugin: "java"
 apply plugin: "groovy"
@@ -18,7 +18,7 @@ repositories {
 	mavenCentral()
 	ivy {
 		layout "pattern"
-		artifactPattern "./lib/[artifact]-[revision](.[ext])"
+		artifactPattern "./lib/[organisation]-[artifact]-[revision](.[ext])"
 	}
 }
 intellij {
@@ -53,64 +53,36 @@ sourceSets {
 	}
 }
 
-task jarPlugin(dependsOn: [compileGroovy]) << {
-	def libDir = "${basePath}/lib"
-	def srcDir = "${basePath}/src/main"
-	def resourcesDir = "${basePath}/src/resources"
-	def compiledDir = "${basePath}/build/classes/main"
-	def targetDir = "${basePath}/build/code-history-mining-plugin/code-history-mining-plugin"
+task validatePluginZip() { doLast {
+	def pluginZip = zipTree("build/distributions/CodeHistoryMining.zip")
+	def pluginZipFiles = pluginZip.files.collect { it.path.replaceFirst(".*/CodeHistoryMining.zip.*?/", "") }.toSet()
 
-    ant.delete(dir: targetDir)
+	expectToBeEqual(pluginZipFiles, [
+		"CodeHistoryMining/lib/groovy-2.4.6.jar",
+		"CodeHistoryMining/lib/liveplugin-live-plugin-0.6.3 beta.jar",
+		"CodeHistoryMining/lib/code-history-mining-plugin.jar",
+		"CodeHistoryMining/lib/groovy-json-2.4.6.jar",
+		"CodeHistoryMining/lib/org.vcsreader-vcsreader-1.1.0.jar",
+		"CodeHistoryMining/lib/annotations-java5-15.0.jar",
+		"CodeHistoryMining/lib/commons-csv-1.0.jar",
+		"CodeHistoryMining/lib/codehistoryminer-core-1.0.jar",
+	].toSet())
+}}
 
-    ant.copy(toDir: "${compiledDir}/META-INF/") {
-        ant.fileset(dir: "${resourcesDir}/META-INF")
-    }
-
-    ant.delete(dir: "${compiledDir}/.idea")
-    ant.delete(dir: "${compiledDir}/lib")
-	ant.copy(toDir: "${compiledDir}/codehistoryminer") {
-		ant.fileset(dir: "${srcDir}/codehistoryminer/", includes: "**/*.html **/*.css **/*.js **/*.gdsl")
+def expectToBeEqual(Set actual, Set expected) {
+	if (actual != expected) {
+		throw new org.gradle.api.GradleException(
+			"Expected:\n" +
+			expected.join("\n") + "\n" +
+			"but was:\n" +
+			actual.join("\n")
+		)
 	}
-    ant.jar(baseDir: compiledDir, destFile: "$targetDir/lib/code-history-mining-plugin.jar")
-
-    ant.copy(toDir: "$targetDir/lib", flatten: true) { file ->
-        ant.fileset(dir: libDir) { include(name: "**/*.jar") }
-    }
 }
 
-//noinspection GroovyAssignabilityCheck
-task validatePluginJar(dependsOn: jarPlugin) << {
-  	def targetDir = "${basePath}/build/code-history-mining-plugin/code-history-mining-plugin" // TODO
-	assert new File(targetDir).listFiles().collect{it.name} == ["lib"]
-
-	def expectedFiles = [
-			"annotations-.*.jar",
-			"code-history-mining-plugin.jar",
-			"commons-csv-.*.jar",
-			"core-.*.jar",
-			"groovy-.*.jar",
-			"groovy-json-.*.jar",
-			"live-plugin-.*.jar",
-			"vcsreader-.*.jar",
-	]
-	def actualFiles = new File(targetDir + "/lib").listFiles().collect{it.name}.sort()
-	[actualFiles, expectedFiles].transpose().each { String actual, String expected ->
-		assert actual.matches(expected)
-	}
-	assert actualFiles.size() == expectedFiles.size()
-}
-
-//noinspection GroovyAssignabilityCheck
-task zipPlugin(dependsOn: jarPlugin) << {
-    ant.zip(
-        destfile: "${basePath}/build/code-history-mining-plugin.zip",
-        basedir: "${basePath}/build/code-history-mining-plugin"
-    )
-}
-
-task downloadMavenDependencies() << {
+task downloadMavenDependencies() { doLast {
 	copyAllMavenDependenciesTo("lib", [configurations.compile])
-}
+}}
 def copyAllMavenDependenciesTo(String targetDirPath, Collection<Configuration> configurations) {
 	ant.delete(dir: targetDirPath)
 	for (Configuration configuration : configurations) {
@@ -127,9 +99,9 @@ def copyMavenDependenciesTo(String targetDirPath, Configuration configuration) {
 	}
 	if (!files.collect{it.name}.containsAll(dependenciesInfo.collect{it.fileName})) {
 		throw new IllegalStateException(
-				"Expected files to contain all dependencies. But was\n" +
-						"files:\n${files.join("\n")}\n" +
-						"dependencies:\n${dependenciesInfo.join("\n")}"
+			"Expected files to contain all dependencies. But was\n" +
+			"files:\n${files.join("\n")}\n" +
+			"dependencies:\n${dependenciesInfo.join("\n")}"
 		)
 	}
 
@@ -139,8 +111,8 @@ def copyMavenDependenciesTo(String targetDirPath, Configuration configuration) {
 		dir.mkdirs()
 		println("Copying: ${file.canonicalPath}")
 		new groovy.util.AntBuilder().copy(
-				file: file.canonicalPath,
-				todir: dir.canonicalPath
+			file: file.canonicalPath,
+			todir: dir.canonicalPath
 		)
 	}
 }
